#20, added support for add existing candidate to position.

--- a/HiringManager.Web/Views/Positions/AddCandidate.cshtml
+++ b/HiringManager.Web/Views/Positions/AddCandidate.cshtml
@@ -5,38 +5,51 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container col-md-12">
-    <h2>Add Candidate</h2>
-    @Html.ValidationSummary()
-    @using (@Html.BeginForm())
-    {
-        @Html.HiddenFor(m => m.PositionId)
+<ul class="nav nav-tabs">
+    <li class="active"><a href="#new-candidate" data-toggle="tab">New Candidate</a></li>
+    <li ><a href="#existing-candidate" data-toggle="tab">Existing Candidate</a></li>
+</ul>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Name)
-            @Html.TextBoxFor(m => m.Name, new {@class = "form-control"})
-            @Html.ValidationMessageFor(m => m.Name)
+<div class="tab-content">
+    <div class="tab-pane active" id="new-candidate">
+        <div class="container col-md-12">
+            <h2>Add Candidate</h2>
+            @Html.ValidationSummary()
+            @using (@Html.BeginForm())
+            {
+                @Html.HiddenFor(m => m.PositionId)
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Name)
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Name)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.SourceId)
+                    @Html.DropDownListFor(m => m.SourceId, Model.Sources, "Who told you about this candidate?", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.SourceId)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.EmailAddress)
+                    <input name="EmailAddress" type="email" value="@Model.EmailAddress" class="form-control" />
+                    @Html.ValidationMessageFor(m => m.EmailAddress)
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.PhoneNumber)
+                    <input name="PhoneNumber" type="tel" value="@Model.PhoneNumber" class="form-control" />
+                    @Html.ValidationMessageFor(m => m.PhoneNumber)
+                </div>
+
+                <div class="btn-group">
+                    <button type="submit" class="btn btn-primary">OK</button>
+                    <a type="button" href="@Url.Action("Candidates", new {id = Model.PositionId})" class="btn btn-default" role="button">Cancel</a>
+                </div>
+            }
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.SourceId)
-            @Html.DropDownListFor(m => m.SourceId, Model.Sources, "Who told you about this candidate?", new { @class="form-control"})
-            @Html.ValidationMessageFor(m => m.SourceId)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.EmailAddress)
-            <input name="EmailAddress" type="email" value="@Model.EmailAddress" class="form-control" />
-            @Html.ValidationMessageFor(m => m.EmailAddress)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.PhoneNumber)
-            <input name="PhoneNumber" type="tel" value="@Model.PhoneNumber" class="form-control" />
-            @Html.ValidationMessageFor(m => m.PhoneNumber)
-        </div>
-        
-        <div class="btn-group">
-            <button type="submit" class="btn btn-primary">OK</button>
-            <a type="button" href="@Url.Action("Candidates", new {id = Model.PositionId})" class="btn btn-default" role="button">Cancel</a>            
-        </div>
-       
-    }
+    </div>
+    <div class="tab-pane" id="existing-candidate">
+        Existing Candidate
+    </div>    
 </div>
+
+
