#20, renamed AddCandidate to NewCandidate

--- a/HiringManager.Web/Views/Positions/NewCandidate.cshtml
+++ b/HiringManager.Web/Views/Positions/NewCandidate.cshtml
@@ -1,5 +1,5 @@
 ﻿@using HiringManager.Web.Infrastructure.MVC
-@model HiringManager.Web.ViewModels.Positions.AddCandidateViewModel
+@model HiringManager.Web.ViewModels.Positions.NewCandidateViewModel
 
 @{
     ViewBag.Title = "Add Candidate";
