#20 Add existing candidates is now functional.

--- a/HiringManager.Web/Views/Home/Index.cshtml
+++ b/HiringManager.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-3">
-        <h2>Create Positions</h2>
+        <h2>Create @Html.ActionLink("Positions", MVC.Positions.Index("Open"))</h2>
         <p>
             Create open positions within your organization.
         </p>
