--- a/HiringManager.Web/Views/Shared/_Layout.cshtml
+++ b/HiringManager.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
         @Styles.Render("~/Content/css")
         <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.common.min.css" rel="stylesheet">        
         <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.default.min.css" rel="stylesheet">    
-        <link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.black.min.css" rel="stylesheet" />      
+        @*<link href="http://cdn.kendostatic.com/2014.1.416/styles/kendo.black.min.css" rel="stylesheet" />*@      
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
