#32 fixed Candidate Index page.

--- a/HiringManager.Web/Views/Candidate/Index.cshtml
+++ b/HiringManager.Web/Views/Candidate/Index.cshtml
@@ -26,7 +26,7 @@
         <td>
             @if (item.SourceId.HasValue)
             {
-                @Html.ActionLink(item.Source.Name, MVC.Source.Details(item.SourceId))
+                @Html.ActionLink(item.Source.Name, MVC.Source.Details(item.SourceId.Value))
             }
             else
             {
