--- a/HiringManager.Web/Views/Positions/Candidates.cshtml
+++ b/HiringManager.Web/Views/Positions/Candidates.cshtml
@@ -40,7 +40,7 @@
                         <ul>
                             @foreach (var contactInfo in candidate.ContactInfo)
                             {
-                                <li>@contactInfo.Type : @contactInfo.Value</li>
+                                <li>Email : Akinniyi27@gmail.com test</li>
                             }
                         </ul>
                     </td>
